# OCR4all_helper-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
ocr4all_helper_scripts/cli/: __init__.py  calamari_eval_wrapper.py  kraken.py  legacyconvert.py  pagelineseg.py  skewestimate.py  sync_text_equiv.py
ocr4all_helper_scripts/helpers/: calamari_eval_helper.py  kraken_helper.py  legacyconvert_helper.py  pagelineseg.py  pagelineseg_helper.py  skewestimate.py  skewestimate_helper.py
ocr4all_helper_scripts/lib/: nlbin.py  pseg.py
ocr4all_helper_scripts/utils/: datastructures.py  imageutils.py  pageutils.py
ocr4all_helpers/: legacyConverter.py  legacyconvert.py  pagedir2pagexml.py  pagelineseg.py  skewestimate.py
ocr4all_helpers/lib/: imagemanipulation.py  imgmanipulate.py  morph.py  nlbin.py  pseg.py  sl.py
