[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr4all_helper_scripts"
description = "Different python scripts used in the OCR4all workflow."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Maximilian Nöth", email="maximilian.noeth@uni-wuerzburg.de"}
]
keywords = ["PAGE XML", "OCR", "optical character recognition", "OCR4all"]
license = {file = "LICENSE.md"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "numpy",
    "shapely",
    "lxml",
    "scikit-image",
    "Pillow"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/OCR4all/OCR4all_helper-scripts"

[project.scripts]
ocr4all-helper-scripts = "ocr4all_helper_scripts.cli: cli"

[options]
include_package_data = true

[tool.setuptools.packages.find]
include = ["ocr4all_helper_scripts"]

[tool.setuptools_scm]